--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "element-ui": "^2.15.9",
     "git": "^0.1.5",
     "vue": "^2.6.14",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vue-table-with-tree-grid": "^0.2.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
